--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "babel-eslint": "^8.0.3",
+    "js-cookie": "^2.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
@@ -14,7 +15,6 @@
     "react-scripts": "1.0.16",
     "redux": "^3.7.2",
     "redux-devise-axios": "^0.0.4",
-    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
